@@ -14,6 +14,7 @@ Changes since the uhexen2-1.5.1 release:
   and 2 (very transparent).
 * SDL / Unix: SDL mouse input updates to prevent unintended
   view coordinate changes.
+* SDL / Unix: Revised SDL unicode and dead keys support.
 * Mac OS X: Fixed compilation failure due to a typo in MIDI
   code introduced in v1.5.1.
 * DOS: Added WatTCP (WATT-32) networking support for hexen2
